--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^6.0.2",
+    "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
